Login button alignment corrected

--- a/angularclient/src/app/login/login.component.css
+++ b/angularclient/src/app/login/login.component.css
@@ -9,7 +9,3 @@
 .form-control.ng-touched.ng-invalid {
     border: 2px solid red;
 }
-
-.btn{
-    margin-left: 35%;
-}
